# orion

./: .gitignore  Cargo.toml  Dockerfile  README.md  bonnie.toml  compose.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs  prelude.rs
src/utils/: cli.rs  completer.rs  config.rs  mod.rs
