[package]
name = "orion"
version = "0.6.0"
edition = "2021"
authors = ["ArnabRollin <iamarnab.phukan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.6"
color-eyre = "0.6.3"
orion_lib = "7.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
